# NSQCuR

./: Cargo.toml  build.rs
.github/workflows/: .directory  build.yml  release.yml
src/: app.rs  config.rs  lib.rs  main.rs
src/modules/: addon_manager.rs  mod.rs
