[package]
name = "nightwatch-updater"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
eframe = { version = "0.31.0", features = ["persistence", "icon_loading"] }
egui = "0.31.0"
fs_extra = "1.3.0"
futures = "0.3"
image = "0.25"
indexmap = { version = "2.7.1", features = ["serde"] }
log = "0.4"
reqwest = { version = "0.12.12", features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simplelog = "0.12.1"
tempfile = "3.5"
tokio = { version = "1.0", features = ["full"] }
zip-extensions = "0.8.1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser", "winbase"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true
panic = "abort"

[build-dependencies]
winres = "0.1"
