[package]
name = "nightwatch-updater"
version = "0.1.0"
edition = "2021"

[build-dependencies]
winres = "0.1.12"

[dependencies]
anyhow = "1.0"
eframe = { version = "0.31.0", features = ["persistence"] }
egui = "0.31.0"
fs_extra = "1.3.0"
image = "0.25"
indexmap = { version = "2.7.1", features = ["serde"] }
log = "0.4"
native-tls = "0.2.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simplelog = "0.12.1"
tempfile = "3.5"
ureq = { version = "2.9.6", features = ["native-tls"] }
zip-extensions = "0.8.1"
shell-words = "1.1.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser", "winbase"] }

[package.metadata.winres]
IconPath = "resources/emblem.ico"
FileVersion = "1.0.0"
ProductVersion = "1.0.0"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true
panic = "abort"
